[package]
name = "nxsh_hal"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"

[dependencies]
# libc = "0.2"  # Removed C/C++ dependency - replaced with pure Rust alternatives
anyhow = "1"
num_cpus = "1.16"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", default-features = false, features = ["fs", "process", "signal", "sched", "mount", "mman", "resource", "user"] }
# libc = "0.2"  # Removed C/C++ dependency - replaced with nix
# seccomp-sys = "0.1"  # Removed C/C++ dependency - replaced with pure Rust seccomp  
# seccomp = { version = "0.1", default-features = false }  # Removed - contains C dependencies through seccomp-sys
# Pure Rust security implementation using process controls directly through nix

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winsock2", "ws2def", "ws2ipdef", "iphlpapi"] }
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_System_Memory", "Win32_System_Time", "Win32_Storage_FileSystem", "Win32_System_SystemInformation", "Win32_System_Threading"] }

[dev-dependencies]
tempfile = "3.8" 
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "hal_performance"
harness = false