[package]
name = "nxsh_plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
nxsh_core = { path = "../nxsh_core" }
# Latest wasmtime with component model support
wasmtime = { version = "28.0.0", default-features = false, features = ["async", "component-model", "cranelift"] }
wasmtime-wasi = "28.0.0"
# Component model support
wit-bindgen = "0.35.0"
wit-component = "0.220.0"
# Async runtime
tokio = { version = "1.0", features = ["full"] }
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Cryptography for plugin verification
ring = "0.17"
base64 = "0.22"
# HTTP client for plugin download
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
# Version handling
semver = "1.0"
# File system operations
walkdir = "2.3"
# Configuration
toml = "0.8"
# Logging
log = "0.4"
# Time handling
chrono = { version = "0.4", features = ["serde"] }
# Lazy static initialization
once_cell = "1.19"
# Cryptographic signatures
ed25519-dalek = "2.1"
# Password hashing
argon2 = "0.5"
# Secure memory handling
zeroize = { version = "1.7", features = ["zeroize_derive"] }
# YAML parsing
serde_yaml = "0.9"
# Hex encoding
hex = "0.4"
# SHA-2 hashing
sha2 = "0.10"
# UUID generation for resource tracking
uuid = { version = "1.6", features = ["v4", "serde"] }
# File system watching for hot reload
notify = "4.0" 