[package]
name = "nxsh_plugin"
version = "0.1.0"
edition = "2021"

[features]
# Full plugin system with all capabilities (default for non-busybox builds)
default = ["full"]

# Feature categories for fine-grained control
native-plugins = ["dep:libloading", "dep:dlopen2"]                      # Native Rust plugin loading
wasi-runtime = ["dep:wasmi", "dep:wasmparser", "dep:wat", "dep:wasm-encoder", "dep:getrandom"]  # WASM/WASI runtime
crypto-verification = ["dep:ed25519-dalek", "dep:sha2", "dep:chacha20poly1305", "dep:argon2", "dep:rand", "dep:base64"]  # Cryptographic signature verification
remote-plugins = ["dep:ureq", "crypto-verification"]                    # Remote plugin downloading and verification
plugin-management = ["dep:toml", "dep:walkdir", "dep:dirs", "dep:semver", "dep:uuid"]  # Plugin configuration and management
async-support = ["dep:tokio", "dep:dashmap"]                           # Async plugin execution
event-dispatch = ["dep:futures"]                                         # Async event dispatch helpers
hot-reload = ["dep:notify"]                                             # Hot-reloading plugin development

# Convenience bundles
full = [
    "native-plugins",
    "wasi-runtime", 
    "crypto-verification",
    "remote-plugins",
    "plugin-management",
    "async-support",
    "hot-reload",
    "event-dispatch"
]

# Minimal configuration for busybox mode - only essential native plugin support
minimal = ["async-support"]

# Security-focused build with verification but no remote capabilities
secure = ["native-plugins", "crypto-verification", "plugin-management"]

# Development build with hot-reload but no remote capabilities
dev = ["native-plugins", "plugin-management", "hot-reload", "async-support"]

[dependencies]
# Core dependencies - always included
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
whoami = "1.4"
hex = "0.4"

# Optional dependencies controlled by features
# Native plugin support
libloading = { version = "0.8", optional = true }
dlopen2 = { version = "0.7", optional = true }

# WASI runtime support
wasmi = { version = "0.34", features = ["std"], optional = true }
wasmparser = { version = "0.218", optional = true }
wat = { version = "1.218", optional = true }
wasm-encoder = { version = "0.218", optional = true }
getrandom = { version = "0.2", optional = true }

# Cryptographic verification
ed25519-dalek = { version = "2.1", optional = true }
sha2 = { version = "0.10", optional = true }
chacha20poly1305 = { version = "0.10", optional = true }
argon2 = { version = "0.5", optional = true }
rand = { version = "0.8", optional = true }
base64 = { version = "0.22", optional = true }

# Remote plugin support
ureq = { version = "2.11", default-features = false, optional = true }

# Plugin management
toml = { version = "0.8", optional = true }
walkdir = { version = "2.3", optional = true }
dirs = { version = "5.0", optional = true }
semver = { version = "1.0", optional = true }
uuid = { version = "1.0", features = ["v4", "serde"], optional = true }

# Async support
tokio = { version = "1.0", features = ["full"], optional = true }
dashmap = { version = "5.5", optional = true }
futures = { version = "0.3", optional = true }

# Hot reload support
notify = { version = "4.0", optional = true }

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
# Lazy static initialization
once_cell = "1.19"
# Secure memory handling
zeroize = { version = "1.7", features = ["zeroize_derive"] }
# YAML parsing
serde_yaml = "0.9"
# Hex encoding
hex = "0.4"
# UUID generation for resource tracking
uuid = { version = "1.6", features = ["v4", "serde"] }
# File system watching for hot reload
notify = "4.0" 