[package]
name = "nxsh_ui"
version = "0.1.0"
edition = "2021"

[dependencies]
nxsh_core = { path = "../nxsh_core" }
nxsh_builtins = { path = "../nxsh_builtins" }
nxsh_parser = { path = "../nxsh_parser" }
ratatui = "0.26"
crossterm = "0.27"
# Latest rustyline for advanced line editing
rustyline = "16.0.0"
# Syntax highlighting - using pure Rust regex-based highlighting instead of syntect
regex = "1.10"
# Theme support
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
# Color handling
ansi_term = "0.12"
# Configuration management
dirs = "5.0"
# Error handling
anyhow = "1.0"
# Time handling
chrono = { version = "0.4", features = ["serde"] }
# Async support for performance
tokio = { version = "1.0", features = ["full"], optional = true }
# Fuzzy matching for completion
fuzzy-matcher = "0.3"
# Unicode support
unicode-width = "0.1"
unicode-segmentation = "1.10"

[features]
default = ["async"]
async = ["tokio"] 