[package]
name = "nxsh_ui"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"

[dependencies]
nxsh_core = { path = "../nxsh_core" }
nxsh_builtins = { path = "../nxsh_builtins" }  # Complete UI/UX Layer Implementation
nxsh_parser = { path = "../nxsh_parser" }

# Terminal control - Pure Rust implementation
crossterm = "0.27"
# Advanced line editing with comprehensive features
rustyline = "16.0.0"
# Syntax highlighting - using pure Rust regex-based highlighting instead of syntect
regex = "1.10"
# Parser for error handling
pest = "2.7"
# Theme and configuration support
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
# Comprehensive error handling
anyhow = "1.0"
thiserror = "1.0"
# Logging support for accessibility
log = "0.4"
# Signal handling for graceful shutdown
ctrlc = "3.4"
# Color handling with advanced features (maintained alternative)
nu-ansi-term = "0.50"
# Terminal detection for color support (std-based)
is-terminal = "0.4"
# Configuration management
dirs = "5.0"
toml = "0.8"
# Time handling for performance metrics
chrono = { version = "0.4", features = ["serde"] }
# Comprehensive system information
hostname = "0.3"
whoami = "1.4"
sysinfo = "0.30"
# Fuzzy matching for advanced completion
fuzzy-matcher = "0.3"
# Async support for high-performance operations
tokio = { version = "1.0", features = ["full", "sync"], optional = true }
# Crypto for history encryption
aes-gcm = { version = "0.10", features = ["aes"] }
argon2 = "0.5"
rand = "0.8"
# Image rendering and font rasterization (pure Rust)
image = { version = "0.24", default-features = false, features = ["png"] }
ab_glyph = "0.2"

# Unix-specific dependencies for full functionality
[target.'cfg(unix)'.dependencies]
libc = "0.2"
# Unicode support for international text
unicode-width = "0.1"
unicode-segmentation = "1.10"

[features]
default = ["async"]
async = ["tokio"]
# Optional metrics feature gates
net-metrics = []
battery-metrics = []

[[example]]
name = "theme_system_test"
path = "src/theme_system_test.rs"

[dev-dependencies]
tempfile = "3.8"
once_cell = "1"