[package]
name = "nxsh_ui"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"

[dependencies]
nxsh_core = { path = "../nxsh_core", features = ["error-rich", "heavy-time", "system-info"] }
nxsh_parser = { path = "../nxsh_parser" }

# Terminal control - Pure Rust implementation (Windows compatible)
crossterm = "0.27"
# Parser for error handling
pest = "2.7"
# Theme and configuration support
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
# Comprehensive error handling
anyhow = "1.0"
thiserror = "1.0"
# Logging support for accessibility
log = "0.4"
# Signal handling for graceful shutdown
ctrlc = "3.4"
# Unicode text width calculation
unicode-width = "0.1"
# Color handling with advanced features (maintained alternative)
nu-ansi-term = "0.50"
# Terminal detection for color support (std-based)
is-terminal = "0.4"
# Configuration management
dirs = "5.0"
toml = "0.8"
# Time handling for performance metrics
chrono = { version = "0.4", features = ["serde"] }
# Comprehensive system information
hostname = "0.3"
whoami = "1.4"
sysinfo = "0.29"
# Optional battery metrics support
battery = { version = "0.7", optional = true }
# Unique ID generation for sessions
uuid = { version = "1.0", features = ["v4", "serde"] }
# Regular expressions for syntax highlighting
regex = "1.10"
# Async support for high-performance operations
tokio = { version = "1.0", features = ["full", "sync"], optional = true }
# Rich text and formatting
textwrap = "0.16"
# Fuzzy matching for completion
fuzzy-matcher = "0.3"
# High-performance parallel processing for completion
rayon = "1.8"
# LRU cache for ultra-fast file completion
lru = "0.12"
# Futures for async coordination
futures = "0.3"
# Crypto for history encryption
aes-gcm = { version = "0.10", features = ["aes"] }
argon2 = "0.5"
rand = "0.8"
# Image rendering and font rasterization (pure Rust)
image = { version = "0.24", default-features = false, features = ["png"] }
ab_glyph = "0.2"

[features]
default = ["async"]
async = ["tokio"]
# Optional metrics feature gates
# Enabling net-metrics uses sysinfo's network API (no extra deps)
net-metrics = []
# Enabling battery-metrics pulls in the optional `battery` crate
battery-metrics = ["battery"]

[[example]]
name = "theme_system_test"
path = "src/theme_system_test.rs"

# [[example]]
# name = "completion_demo"
# path = "src/completion_demo.rs"

[dev-dependencies]
tempfile = "3.8"
once_cell = "1"